Overlay z-index fix

--- a/stylesmedia.css
+++ b/stylesmedia.css
@@ -70,7 +70,7 @@ span {
   background-image: url(/jd-tex-compressed.jpg);
   background-size: cover;
   opacity: 0.5;
-  z-index: 2;
+  z-index: -2;
   position: fixed;
   left: 0;
   right: 0;
